ie and ui on small laptops fixed, code clean up

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -51,6 +51,7 @@
       width: 400px;
       position: absolute;
       left: calc(50% - 200px);
+      top: 11px;
       background-color: darken($dark-gray, 10%);
       padding: 4px 16px;
       mat-input-container {
