--- a/src/variables.scss
+++ b/src/variables.scss
@@ -19,4 +19,4 @@ $font-lato: 'Lato', sans-serif;
 $md-breakpoint: 1500px;
 $mobile-breakpoint: 690px;
 $tablet-breakpoint: 995px;
-$desktop-breakpoint: 1365px;
+$desktop-breakpoint: 1367px;
